# Rust_Mini_items

./: .gitignore  LICENSE  README.md  tasks.json
chatroom/: Cargo.toml
chatroom/public/: index.html
chatroom/src/: main.rs
my-project/: Anchor.toml
my-project/programs/my-project/: Cargo.toml
my-project/programs/my-project/src/: lib.rs
todo-cli-tool/: Cargo.toml
todo-cli-tool/src/: main.rs
web_scraper/: Cargo.toml
web_scraper/src/: main.rs
zipper_man/: Cargo.toml
zipper_man/src/: main.rs
